--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,9 +9,7 @@
 <div style="text-align:center">
     <h1 id="message"></h1>
     <div>
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+        <button>Turn</button>
     </div>
     <div id="score"></div>
     <p>
