--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,14 @@
     <title>Packet Thief</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+    </style>
 </head>
 <body>
 
