Added score + bonus tiles

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html><html lang="en"><head><title>Packet Thief</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>* {
             margin: 0;
             padding: 0;
-        }</style></head><body><div style="text-align:center"><div><h1 id="message"></h1><canvas id="game"></canvas><div id="score"></div><p><a href="/stat">Statistics</a></p></div></div><script src="/socket.io/socket.io.js"></script><script src="/shared.js"></script><script src="/client.js"></script></body></html>
+        }
+
+        .blue</style></head><body><div style="text-align:center"><div><h1 id="message"></h1><canvas id="game"></canvas><div id="score"></div><p><a href="/stat">Statistics</a></p></div></div><script src="/socket.io/socket.io.js"></script><script src="/shared.js"></script><script src="/client.js"></script></body></html>
