--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,19 @@
             width: 100%;
         }
 
-        #hud {
+        h2 {
+            font-size: 20px;
+        }
 
+        #wrapper {
+            text-align:center;
+            width: 100%;
+            height: 100%;
+        }
+
+        #hud {
             position: absolute;
-            top: 560px;
+            top: 415px;
             bottom: 0;
             width: 100%;
         }
@@ -38,9 +47,9 @@
                 transform: scale(1);
             }
             50%  {
-                transform: scale(1.5);
+                transform: scale(1.3);
             }
             100% {
                 transform: scale(1);
             }
-        }</style></head><body><div style="text-align:center"><div><canvas id="game"></canvas><div id="hud"><div class="inner"><span id="message"></span> <span id="score"></span></div></div></div><script src="/socket.io/socket.io.js"></script><script src="/shared.js"></script><script src="/client.js"></script></div></body></html>
+        }</style></head><body><div id="wrapper"><canvas id="game"></canvas><div id="hud"><div class="inner"><span id="message"></span> <span id="score"></span></div></div></div><script src="/socket.io/socket.io.js"></script><script src="/shared.js"></script><script src="/client.js"></script></body></html>
