--- a/src/public/index.html
+++ b/src/public/index.html
@@ -16,10 +16,19 @@
             width: 100%;
         }
 
-        #hud {
+        h2 {
+            font-size: 20px;
+        }
 
+        #wrapper {
+            text-align:center;
+            width: 100%;
+            height: 100%;
+        }
+
+        #hud {
             position: absolute;
-            top: 560px;
+            top: 415px;
             bottom: 0;
             width: 100%;
         }
@@ -46,7 +55,7 @@
                 transform: scale(1);
             }
             50%  {
-                transform: scale(1.5);
+                transform: scale(1.3);
             }
             100% {
                 transform: scale(1);
@@ -57,16 +66,14 @@
 </head>
 <body>
 
-<div style="text-align:center">
-    <div>
-        <canvas id="game"></canvas>
-        <div id="hud">
-            <div class="inner">
-                <span id="message"></span>
-                <span id="score"></span>
-            </div>
+<div id="wrapper">
+    <canvas id="game"></canvas>
+    <div id="hud">
+        <div class="inner">
+            <span id="message"></span>
+            <span id="score"></span>
         </div>
-    </span>
+    </div>
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
