--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,13 @@
             font-size: 20px;
         }
 
-        #wrapper {
+        .wrapper {
             text-align:center;
             width: 100%;
-            height: 100%;
         }
 
-        #hud {
-            position: absolute;
-            top: 415px;
-            bottom: 0;
-            width: 100%;
+        #game-wrapper {
+            display: none;
         }
 
         #hud .inner {
@@ -52,4 +48,4 @@
             100% {
                 transform: scale(1);
             }
-        }</style></head><body><div id="wrapper"><canvas id="game"></canvas><div id="hud"><div class="inner"><span id="message"></span> <span id="score"></span></div></div></div><script src="/socket.io/socket.io.js"></script><script src="/shared.js"></script><script src="/client.js"></script></body></html>
+        }</style></head><body><div id="intro-wrapper" class="wrapper"><h1>Packet Thief</h1><button id="find-human">Find Opponent</button><div id="status"></div></div><div id="game-wrapper" class="wrapper"><canvas id="game"></canvas><div id="hud"><div class="inner"><span id="message"></span> <span id="score"></span></div></div></div><script src="/socket.io/socket.io.js"></script><script src="/shared.js"></script><script src="/client.js"></script></body></html>
