--- a/src/public/index.html
+++ b/src/public/index.html
@@ -64,7 +64,7 @@
     <div id="intro-wrapper" class="wrapper">
         <h1>Packet Thief</h1>
         <button id="find-human">Find Opponent</button>
-        <button id="start-basic-ai">Basic AI</button>
+        <button id="start-basic-ai">Play Basic AI</button>
         <div id="status"></div>
     </div>
 
