Adding gradient to pieces

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -16,6 +16,14 @@
             width: 100%;
         }
 
+        #intro-wrapper h1, #intro-wrapper h2 {
+            margin: 20px 0;
+        }
+
+        #intro-wrapper button {
+            padding: 20px;
+        }
+
         h2 {
             font-size: 20px;
         }
@@ -64,7 +72,7 @@
     <div id="intro-wrapper" class="wrapper">
         <h1>Packet Thief</h1>
         <button id="find-human">Find Opponent</button>
-        <button id="start-basic-ai">Play Basic AI</button>
+        <button id="start-basic-ai">Play against AI</button>
         <div id="status"></div>
     </div>
 
