--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
             width: 100%;
         }
 
+        #intro-wrapper h1, #intro-wrapper h2 {
+            margin: 20px 0;
+        }
+
+        #intro-wrapper button {
+            padding: 20px;
+        }
+
         h2 {
             font-size: 20px;
         }
@@ -48,4 +56,4 @@
             100% {
                 transform: scale(1);
             }
-        }</style></head><body><div id="intro-wrapper" class="wrapper"><h1>Packet Thief</h1><button id="find-human">Find Opponent</button> <button id="start-basic-ai">Play Basic AI</button><div id="status"></div></div><div id="game-wrapper" class="wrapper"><canvas id="game"></canvas><div id="hud"><div class="inner"><span id="message"></span> <span id="score"></span></div></div></div><script src="/socket.io/socket.io.js"></script><script src="/shared.js"></script><script src="/client.js"></script></body></html>
+        }</style></head><body><div id="intro-wrapper" class="wrapper"><h1>Packet Thief</h1><button id="find-human">Find Opponent</button> <button id="start-basic-ai">Play against AI</button><div id="status"></div></div><div id="game-wrapper" class="wrapper"><canvas id="game"></canvas><div id="hud"><div class="inner"><span id="message"></span> <span id="score"></span></div></div></div><script src="/socket.io/socket.io.js"></script><script src="/shared.js"></script><script src="/client.js"></script></body></html>
