--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,6 +14,7 @@
         html, body {
             height: 100%;
             width: 100%;
+            background: #DDDDDD;
         }
 
         #intro-wrapper h1, #intro-wrapper h2 {
