--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         html, body {
             height: 100%;
             width: 100%;
+            background: #DDDDDD;
         }
 
         #intro-wrapper h1, #intro-wrapper h2 {
