Adding some colour to text

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,6 +17,16 @@
             background: #DDDDDD;
         }
 
+        .red {
+            color: #FF0000;
+            font-weight: bold;
+        }
+
+        .blue {
+            color: #0000FF;
+            font-weight: bold;
+        }
+
         #intro-wrapper h1, #intro-wrapper h2 {
             margin: 20px 0;
         }
@@ -46,6 +56,9 @@
         #hud span {
             display: inline-block;
             vertical-align: middle;
+        }
+
+        #score, #message {
             width: 45%;
         }
 
