--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
             background: #DDDDDD;
         }
 
+        .red {
+            color: #FF0000;
+            font-weight: bold;
+        }
+
+        .blue {
+            color: #0000FF;
+            font-weight: bold;
+        }
+
         #intro-wrapper h1, #intro-wrapper h2 {
             margin: 20px 0;
         }
@@ -38,6 +48,9 @@
         #hud span {
             display: inline-block;
             vertical-align: middle;
+        }
+
+        #score, #message {
             width: 45%;
         }
 
