--- a/src/public/index.html
+++ b/src/public/index.html
@@ -63,20 +63,59 @@
         }
 
         #message .zoom {
+            /* Webkit */
+            -webkit-animation-name: pulse;
+            -webkit-animation-duration: 4s;
+            -webkit-animation-iteration-count: infinite;
+
+            /* Mozilla */
+            -moz-animation-name: pulse;
+            -moz-animation-duration: 4s;
+            -moz-animation-iteration-count: infinite;
+
+            /* Opera */
+            -o-animation-name: pulse;
+            -o-animation-duration: 4s;
+            -o-animation-iteration-count: infinite;
+
             animation-name: pulse;
             animation-duration: 4s;
             animation-iteration-count: infinite;
         }
 
-        @keyframes pulse {
-            0%   {
+        @-webkit-keyframes pulse {
+            0%, 100% {
                 transform: scale(1);
             }
             50%  {
                 transform: scale(1.3);
             }
-            100% {
+        }
+
+        @-moz-keyframes pulse {
+            0%, 100% {
                 transform: scale(1);
+            }
+            50%  {
+                transform: scale(1.3);
+            }
+        }
+
+        @-o-keyframes pulse {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50%  {
+                transform: scale(1.3);
+            }
+        }
+
+        @keyframes pulse {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50%  {
+                transform: scale(1.3);
             }
         }
 
