--- a/src/public/index.html
+++ b/src/public/index.html
@@ -35,10 +35,6 @@
             padding: 20px;
         }
 
-        h2 {
-            font-size: 20px;
-        }
-
         .wrapper {
             text-align:center;
             width: 100%;
@@ -46,6 +42,10 @@
 
         #game-wrapper {
             display: none;
+        }
+
+        #hud h2 {
+            font-size: 20px;
         }
 
         #hud .inner {
@@ -119,11 +119,44 @@
             }
         }
 
+        #before-capture, .after-capture {
+            height: 53px;
+            width: 150px;
+            display: inline-block;
+            background-image: url("help.png");
+            background-repeat: no-repeat;
+        }
+
+        #before-capture {
+            width: 150px;
+            background-position: left 50%;
+        }
+
+        .after-capture {
+            width: 50px;
+            background-position: left 50%;
+        }
+
     </style>
 </head>
 <body>
     <div id="intro-wrapper" class="wrapper">
         <h1>Packet Thief</h1>
+        <div>
+            <p>The network mesh has gone offline.</p>
+            <p>Restore functionality and infect more nodes than your opponent.</p>
+            <br>
+            <p>Your nodes are <span class="blue">blue</span></p>
+            <p>Opponent nodes are <span class="red">red</span></p>
+            <br>
+            <p>To spread your malware infect a node either side of an opponent.</p>
+            <br>
+            <div id="before-capture"></div>
+            <p>Click or Tap to infect a free node.</p>
+            <div class="after-capture"></div><div class="after-capture"></div><div class="after-capture"></div>
+            <br>
+            <br>
+        </div>
         <button id="find-human">Find Opponent</button>
         <button id="start-basic-ai">Play against AI</button>
         <div id="status"></div>
