Chaning button text

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -158,8 +158,8 @@
             <br>
         </div>
         <button id="find-human">Find Opponent</button>
-        <button id="start-basic-ai">Play Basic AI</button>
-        <button id="start-better-ai">Play Smart AI</button>
+        <button id="start-basic-ai">Play Basic Bot</button>
+        <button id="start-better-ai">Play Smart Bot</button>
         <div id="status"></div>
     </div>
 
